--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "package": "svelte-kit package",
     "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "deploy": "rimraf build && svelte-kit build && touch build/.nojekyll && gh-pages -b deploy -d build -t true"
   },
   "devDependencies": {
-    "@rgossiaux/svelte-headlessui": "^1.0.0-beta.8",
-    "@sveltejs/adapter-auto": "next",
+    "@iconify-json/teenyicons": "^1.0.1",
+    "@octokit/request": "^5.6.3",
+    "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
+    "@unocss/preset-icons": "^0.22.6",
+    "@unocss/reset": "^0.22.6",
+    "gh-pages": "^3.2.3",
+    "mdsvex": "^0.9.8",
+    "rehype-sanitize": "^5.0.1",
+    "remark-oembed": "^1.2.2",
+    "rimraf": "^3.0.2",
+    "slugify": "^1.6.5",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
+    "svelte-meta": "^1.0.2",
     "svelte-preprocess": "^4.9.4",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "unocss": "^0.22.6",
+    "unocss-preset-typography": "^0.4.0"
   },
   "type": "module"
 }
