--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "deploy": "gh-pages -b deploy -d build -t true"
   },
   "devDependencies": {
+    "@giscus/svelte": "^1.0.1",
     "@iconify-json/teenyicons": "^1.0.1",
+    "@octokit/graphql": "^4.8.0",
     "@octokit/request": "^5.6.3",
     "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "next",
@@ -25,6 +27,7 @@
     "svelte-check": "^2.2.6",
     "svelte-meta": "^1.0.2",
     "svelte-preprocess": "^4.9.4",
+    "timeago.js": "^4.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3",
     "unocss": "^0.22.6",
