--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   deploy:
+    if: ${{contains(github.event.discussion.category.name, 'Published')}}
     runs-on: ubuntu-latest
 
     steps:
