--- a/_app/manifest.json
+++ b/_app/manifest.json
@@ -1,10 +1,11 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-bb763e25.js",
+    "file": "start-a6b685f2.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_vendor-18abff92.js"
+      "_vendor-0edfcedb.js",
+      "_singletons-a6a7384f.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
@@ -18,91 +19,95 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-8d331afe.js",
+    "file": "pages/__layout.svelte-fc7492c2.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-18abff92.js",
-      "_stores-1e838516.js",
-      "_siteConfig-f2d86ffb.js"
+      "_vendor-0edfcedb.js",
+      "_singletons-a6a7384f.js",
+      "_siteConfig-2c02497e.js",
+      "_stores-d6f5a68e.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-e01931f8.css"
+      "assets/pages/__layout.svelte-6ea44ae0.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "error.svelte-34e7ecc7.js",
+    "file": "error.svelte-2a88f0b3.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-18abff92.js"
+      "_vendor-0edfcedb.js"
     ],
     "css": [
       "assets/vendor-b5bde1ac.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-1ec127a3.js",
+    "file": "pages/index.svelte-555dadd3.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-18abff92.js",
-      "_siteConfig-f2d86ffb.js",
-      "_ExternalLink-da18d339.js"
+      "_vendor-0edfcedb.js",
+      "_siteConfig-2c02497e.js",
+      "_ExternalLink-83b2f731.js"
     ],
     "css": [
       "assets/pages/index.svelte-3af4ec54.css"
     ]
   },
   "src/routes/posts/index.svelte": {
-    "file": "pages/posts/index.svelte-d6686664.js",
+    "file": "pages/posts/index.svelte-a486a175.js",
     "src": "src/routes/posts/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-18abff92.js"
+      "_vendor-0edfcedb.js"
     ],
     "css": [
       "assets/vendor-b5bde1ac.css"
     ]
   },
   "src/routes/posts/[slug].svelte": {
-    "file": "pages/posts/_slug_.svelte-1347dfea.js",
+    "file": "pages/posts/_slug_.svelte-f04a8350.js",
     "src": "src/routes/posts/[slug].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-18abff92.js",
-      "_siteConfig-f2d86ffb.js",
-      "_stores-1e838516.js",
-      "_ExternalLink-da18d339.js"
+      "_vendor-0edfcedb.js",
+      "_siteConfig-2c02497e.js",
+      "_stores-d6f5a68e.js",
+      "_ExternalLink-83b2f731.js"
     ],
     "css": [
       "assets/pages/posts/_slug_.svelte-a2a66d26.css"
     ]
   },
-  "_vendor-18abff92.js": {
-    "file": "chunks/vendor-18abff92.js",
+  "_vendor-0edfcedb.js": {
+    "file": "chunks/vendor-0edfcedb.js",
     "css": [
       "assets/vendor-b5bde1ac.css"
     ]
   },
-  "_stores-1e838516.js": {
-    "file": "chunks/stores-1e838516.js",
+  "_singletons-a6a7384f.js": {
+    "file": "chunks/singletons-a6a7384f.js"
+  },
+  "_siteConfig-2c02497e.js": {
+    "file": "chunks/siteConfig-2c02497e.js"
+  },
+  "_stores-d6f5a68e.js": {
+    "file": "chunks/stores-d6f5a68e.js",
     "imports": [
-      "_vendor-18abff92.js"
+      "_vendor-0edfcedb.js"
     ]
   },
-  "_siteConfig-f2d86ffb.js": {
-    "file": "chunks/siteConfig-f2d86ffb.js"
-  },
-  "_ExternalLink-da18d339.js": {
-    "file": "chunks/ExternalLink-da18d339.js",
+  "_ExternalLink-83b2f731.js": {
+    "file": "chunks/ExternalLink-83b2f731.js",
     "imports": [
-      "_vendor-18abff92.js"
+      "_vendor-0edfcedb.js"
     ],
     "css": [
       "assets/vendor-b5bde1ac.css"
