--- a/_app/manifest.json
+++ b/_app/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-1d7541f5.js",
+    "file": "start-13888a58.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
@@ -19,7 +19,7 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-f8343019.js",
+    "file": "pages/__layout.svelte-a9dd4421.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -42,7 +42,7 @@
       "_vendor-0edfcedb.js"
     ],
     "css": [
-      "assets/error.svelte-03c54461.css"
+      "assets/pages/posts/index.svelte-6a751ed3.css"
     ]
   },
   "src/routes/index.svelte": {
@@ -68,7 +68,7 @@
       "_vendor-0edfcedb.js"
     ],
     "css": [
-      "assets/error.svelte-03c54461.css"
+      "assets/pages/posts/index.svelte-6a751ed3.css"
     ]
   },
   "src/routes/posts/[slug].svelte": {
@@ -89,7 +89,7 @@
   "_vendor-0edfcedb.js": {
     "file": "chunks/vendor-0edfcedb.js",
     "css": [
-      "assets/error.svelte-03c54461.css"
+      "assets/pages/posts/index.svelte-6a751ed3.css"
     ]
   },
   "_singletons-a6a7384f.js": {
@@ -110,7 +110,7 @@
       "_vendor-0edfcedb.js"
     ],
     "css": [
-      "assets/error.svelte-03c54461.css"
+      "assets/pages/posts/index.svelte-6a751ed3.css"
     ]
   }
 }
