✨ Added syntax highlighting

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gh-pages": "^3.2.3",
     "mdsvex": "^0.9.8",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-external-links": "^1.0.1",
     "rehype-figure": "^1.0.1",
     "rehype-sanitize": "^5.0.1",
     "rehype-slug": "^5.0.1",
