--- a/_app/manifest.json
+++ b/_app/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-fe077802.js",
+    "file": "start-6d5d0df3.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
@@ -11,26 +11,27 @@
       "src/routes/__layout.svelte",
       ".svelte-kit/runtime/components/error.svelte",
       "src/routes/index.svelte",
+      "src/routes/posts/__error.svelte",
       "src/routes/posts/index.svelte",
       "src/routes/posts/[slug].svelte"
     ],
     "css": [
-      "assets/start-d15cd5b3.css"
+      "assets/start-a079dc92.css"
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-1ededaee.js",
+    "file": "pages/__layout.svelte-3b2a2cd7.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-df338b46.js",
-      "_siteConfig-20bade9d.js",
+      "_siteConfig-cd65c973.js",
       "_singletons-a6a7384f.js",
       "_stores-f5ed660c.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-425671fd.css"
+      "assets/pages/__layout.svelte-32c7a4f3.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
@@ -42,21 +43,33 @@
       "_vendor-df338b46.js"
     ],
     "css": [
-      "assets/ExternalLink-d2f66a10.css"
+      "assets/pages/posts/index.svelte-32a08f02.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-369722fc.js",
+    "file": "pages/index.svelte-84325da7.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-df338b46.js",
-      "_siteConfig-20bade9d.js",
+      "_siteConfig-cd65c973.js",
       "_ExternalLink-4230c020.js"
     ],
     "css": [
-      "assets/pages/index.svelte-8200dd16.css"
+      "assets/pages/index.svelte-8470091e.css"
+    ]
+  },
+  "src/routes/posts/__error.svelte": {
+    "file": "pages/posts/__error.svelte-5d693207.js",
+    "src": "src/routes/posts/__error.svelte",
+    "isEntry": true,
+    "isDynamicEntry": true,
+    "imports": [
+      "_vendor-df338b46.js"
+    ],
+    "css": [
+      "assets/pages/posts/index.svelte-32a08f02.css"
     ]
   },
   "src/routes/posts/index.svelte": {
@@ -68,35 +81,35 @@
       "_vendor-df338b46.js"
     ],
     "css": [
-      "assets/ExternalLink-d2f66a10.css"
+      "assets/pages/posts/index.svelte-32a08f02.css"
     ]
   },
   "src/routes/posts/[slug].svelte": {
-    "file": "pages/posts/_slug_.svelte-f9d57c29.js",
+    "file": "pages/posts/_slug_.svelte-d060a4d2.js",
     "src": "src/routes/posts/[slug].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_vendor-df338b46.js",
-      "_siteConfig-20bade9d.js",
+      "_siteConfig-cd65c973.js",
       "_stores-f5ed660c.js",
       "_ExternalLink-4230c020.js"
     ],
     "css": [
-      "assets/pages/posts/_slug_.svelte-18d1ee24.css"
+      "assets/pages/posts/_slug_.svelte-912b7d98.css"
     ]
   },
   "_vendor-df338b46.js": {
     "file": "chunks/vendor-df338b46.js",
     "css": [
-      "assets/ExternalLink-d2f66a10.css"
+      "assets/pages/posts/index.svelte-32a08f02.css"
     ]
   },
   "_singletons-a6a7384f.js": {
     "file": "chunks/singletons-a6a7384f.js"
   },
-  "_siteConfig-20bade9d.js": {
-    "file": "chunks/siteConfig-20bade9d.js"
+  "_siteConfig-cd65c973.js": {
+    "file": "chunks/siteConfig-cd65c973.js"
   },
   "_stores-f5ed660c.js": {
     "file": "chunks/stores-f5ed660c.js",
@@ -110,7 +123,7 @@
       "_vendor-df338b46.js"
     ],
     "css": [
-      "assets/ExternalLink-d2f66a10.css"
+      "assets/pages/posts/index.svelte-32a08f02.css"
     ]
   }
 }
