--- a/_app/manifest.json
+++ b/_app/manifest.json
@@ -1,86 +1,129 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-7dd3e741.js",
+    "file": "start-ddb0a1d2.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_vendor-11be466b.js"
+      "_vendor-df338b46.js",
+      "_singletons-a6a7384f.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
       ".svelte-kit/runtime/components/error.svelte",
       "src/routes/index.svelte",
-      "src/routes/about.md",
+      "src/routes/posts/__error.svelte",
+      "src/routes/posts/index.svelte",
       "src/routes/posts/[slug].svelte"
     ],
     "css": [
-      "assets/start-dab29f39.css"
+      "assets/start-491f5a18.css"
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-46a70f5e.js",
+    "file": "pages/__layout.svelte-0f267550.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-11be466b.js"
+      "_vendor-df338b46.js",
+      "_siteConfig-cd65c973.js",
+      "_singletons-a6a7384f.js",
+      "_stores-f5ed660c.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-198cf0ad.css"
+      "assets/pages/__layout.svelte-1304510a.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "error.svelte-1271cda5.js",
+    "file": "error.svelte-e856c771.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-11be466b.js"
+      "_vendor-df338b46.js"
     ],
     "css": [
-      "assets/vendor-3b261309.css"
+      "assets/pages/posts/index.svelte-754f7bee.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-0831e791.js",
+    "file": "pages/index.svelte-4d7a8a08.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-11be466b.js"
+      "_vendor-df338b46.js",
+      "_siteConfig-cd65c973.js",
+      "_ExternalLink-4230c020.js"
     ],
     "css": [
-      "assets/pages/index.svelte-31aac316.css"
+      "assets/pages/index.svelte-038192ae.css"
     ]
   },
-  "src/routes/about.md": {
-    "file": "pages/about.md-b20f712b.js",
-    "src": "src/routes/about.md",
+  "src/routes/posts/__error.svelte": {
+    "file": "pages/posts/__error.svelte-5d693207.js",
+    "src": "src/routes/posts/__error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-11be466b.js"
+      "_vendor-df338b46.js"
     ],
     "css": [
-      "assets/vendor-3b261309.css"
+      "assets/pages/posts/index.svelte-754f7bee.css"
+    ]
+  },
+  "src/routes/posts/index.svelte": {
+    "file": "pages/posts/index.svelte-3f3a8f07.js",
+    "src": "src/routes/posts/index.svelte",
+    "isEntry": true,
+    "isDynamicEntry": true,
+    "imports": [
+      "_vendor-df338b46.js"
+    ],
+    "css": [
+      "assets/pages/posts/index.svelte-754f7bee.css"
     ]
   },
   "src/routes/posts/[slug].svelte": {
-    "file": "pages/posts/_slug_.svelte-9a490959.js",
+    "file": "pages/posts/_slug_.svelte-d060a4d2.js",
     "src": "src/routes/posts/[slug].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-11be466b.js"
+      "_vendor-df338b46.js",
+      "_siteConfig-cd65c973.js",
+      "_stores-f5ed660c.js",
+      "_ExternalLink-4230c020.js"
     ],
     "css": [
-      "assets/pages/posts/_slug_.svelte-48bff820.css"
+      "assets/pages/posts/_slug_.svelte-76c304d8.css"
     ]
   },
-  "_vendor-11be466b.js": {
-    "file": "chunks/vendor-11be466b.js",
+  "_vendor-df338b46.js": {
+    "file": "chunks/vendor-df338b46.js",
     "css": [
-      "assets/vendor-3b261309.css"
+      "assets/pages/posts/index.svelte-754f7bee.css"
+    ]
+  },
+  "_singletons-a6a7384f.js": {
+    "file": "chunks/singletons-a6a7384f.js"
+  },
+  "_siteConfig-cd65c973.js": {
+    "file": "chunks/siteConfig-cd65c973.js"
+  },
+  "_stores-f5ed660c.js": {
+    "file": "chunks/stores-f5ed660c.js",
+    "imports": [
+      "_vendor-df338b46.js"
+    ]
+  },
+  "_ExternalLink-4230c020.js": {
+    "file": "chunks/ExternalLink-4230c020.js",
+    "imports": [
+      "_vendor-df338b46.js"
+    ],
+    "css": [
+      "assets/pages/posts/index.svelte-754f7bee.css"
     ]
   }
 }
