--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ on:
   
 jobs:
   deploy:
-    if: ${{ github.event.workflow_dispatch || github.event.schedule || contains(github.event.discussion.category.name, 'Published') }}
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'schedule' || contains(github.event.discussion.category.name, 'Published') }}
     runs-on: ubuntu-latest
 
     steps:
