--- a/_app/immutable/manifest.json
+++ b/_app/immutable/manifest.json
@@ -1,11 +1,11 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-48df3410.js",
+    "file": "start-25d09f5b.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-11880ce7.js",
-      "_index-34a24dc1.js",
+      "_index-1338106f.js",
+      "_index-6cb4c7e5.js",
       "_singletons-d1fb5791.js"
     ],
     "dynamicImports": [
@@ -21,53 +21,53 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-e2e96a67.js",
+    "file": "pages/__layout.svelte-98641dc4.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-11880ce7.js",
-      "_index-34a24dc1.js",
+      "_index-1338106f.js",
+      "_index-6cb4c7e5.js",
       "_siteConfig-cd65c973.js",
       "_singletons-d1fb5791.js",
-      "_stores-9ba9679e.js"
+      "_stores-d7687092.js"
     ],
     "css": [
       "assets/pages/__layout.svelte-f385a540.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "error.svelte-125b0adf.js",
+    "file": "error.svelte-75cf8528.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-11880ce7.js"
+      "_index-1338106f.js"
     ],
     "css": [
-      "assets/pages/posts/index.svelte-754f7bee.css"
+      "assets/error.svelte-0cf2a308.css"
     ]
   },
   "src/routes/posts/__error.svelte": {
-    "file": "pages/posts/__error.svelte-8de529b0.js",
+    "file": "pages/posts/__error.svelte-9d4a97ea.js",
     "src": "src/routes/posts/__error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-11880ce7.js"
+      "_index-1338106f.js"
     ],
     "css": [
-      "assets/pages/posts/index.svelte-754f7bee.css"
+      "assets/error.svelte-0cf2a308.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-f7fb7357.js",
+    "file": "pages/index.svelte-d31313ff.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-11880ce7.js",
-      "_ExternalLink-afd3872a.js",
+      "_index-1338106f.js",
+      "_ExternalLink-fed058ed.js",
       "_siteConfig-cd65c973.js"
     ],
     "css": [
@@ -75,40 +75,40 @@
     ]
   },
   "src/routes/posts/[slug].svelte": {
-    "file": "pages/posts/_slug_.svelte-b4673f22.js",
+    "file": "pages/posts/_slug_.svelte-f6fbe249.js",
     "src": "src/routes/posts/[slug].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-11880ce7.js",
+      "_index-1338106f.js",
       "_siteConfig-cd65c973.js",
-      "_ExternalLink-afd3872a.js",
-      "_stores-9ba9679e.js",
-      "_index-34a24dc1.js"
+      "_ExternalLink-fed058ed.js",
+      "_stores-d7687092.js",
+      "_index-6cb4c7e5.js"
     ],
     "css": [
       "assets/pages/posts/_slug_.svelte-643897fc.css"
     ]
   },
   "src/routes/posts/index.svelte": {
-    "file": "pages/posts/index.svelte-0e566a3f.js",
+    "file": "pages/posts/index.svelte-8fe0c0da.js",
     "src": "src/routes/posts/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-11880ce7.js"
+      "_index-1338106f.js"
     ],
     "css": [
-      "assets/pages/posts/index.svelte-754f7bee.css"
+      "assets/error.svelte-0cf2a308.css"
     ]
   },
-  "_index-11880ce7.js": {
-    "file": "chunks/index-11880ce7.js"
+  "_index-1338106f.js": {
+    "file": "chunks/index-1338106f.js"
   },
-  "_index-34a24dc1.js": {
-    "file": "chunks/index-34a24dc1.js",
+  "_index-6cb4c7e5.js": {
+    "file": "chunks/index-6cb4c7e5.js",
     "imports": [
-      "_index-11880ce7.js"
+      "_index-1338106f.js"
     ]
   },
   "_singletons-d1fb5791.js": {
@@ -117,20 +117,20 @@
   "_siteConfig-cd65c973.js": {
     "file": "chunks/siteConfig-cd65c973.js"
   },
-  "_stores-9ba9679e.js": {
-    "file": "chunks/stores-9ba9679e.js",
+  "_stores-d7687092.js": {
+    "file": "chunks/stores-d7687092.js",
     "imports": [
-      "_index-34a24dc1.js",
-      "_index-11880ce7.js"
+      "_index-6cb4c7e5.js",
+      "_index-1338106f.js"
     ]
   },
-  "_ExternalLink-afd3872a.js": {
-    "file": "chunks/ExternalLink-afd3872a.js",
+  "_ExternalLink-fed058ed.js": {
+    "file": "chunks/ExternalLink-fed058ed.js",
     "imports": [
-      "_index-11880ce7.js"
+      "_index-1338106f.js"
     ],
     "css": [
-      "assets/pages/posts/index.svelte-754f7bee.css"
+      "assets/error.svelte-0cf2a308.css"
     ]
   }
 }
