--- a/_app/immutable/manifest.json
+++ b/_app/immutable/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-776142ad.js",
+    "file": "start-6a42a9ba.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
@@ -45,7 +45,7 @@
       "_index-1338106f.js"
     ],
     "css": [
-      "assets/ExternalLink-0d0133bf.css"
+      "assets/error.svelte-0cf2a308.css"
     ]
   },
   "src/routes/posts/__error.svelte": {
@@ -57,17 +57,17 @@
       "_index-1338106f.js"
     ],
     "css": [
-      "assets/ExternalLink-0d0133bf.css"
+      "assets/error.svelte-0cf2a308.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-949f2838.js",
+    "file": "pages/index.svelte-e3b5038f.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_index-1338106f.js",
-      "_ExternalLink-fed058ed.js",
+      "_getViewCount-307db53d.js",
       "_siteConfig-cd65c973.js"
     ],
     "css": [
@@ -75,14 +75,14 @@
     ]
   },
   "src/routes/posts/[slug].svelte": {
-    "file": "pages/posts/_slug_.svelte-f6fbe249.js",
+    "file": "pages/posts/_slug_.svelte-5ea5e6af.js",
     "src": "src/routes/posts/[slug].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
       "_index-1338106f.js",
       "_siteConfig-cd65c973.js",
-      "_ExternalLink-fed058ed.js",
+      "_getViewCount-307db53d.js",
       "_stores-d7687092.js",
       "_index-6cb4c7e5.js"
     ],
@@ -99,7 +99,7 @@
       "_index-1338106f.js"
     ],
     "css": [
-      "assets/ExternalLink-0d0133bf.css"
+      "assets/error.svelte-0cf2a308.css"
     ]
   },
   "_index-1338106f.js": {
@@ -124,13 +124,14 @@
       "_index-1338106f.js"
     ]
   },
-  "_ExternalLink-fed058ed.js": {
-    "file": "chunks/ExternalLink-fed058ed.js",
+  "_getViewCount-307db53d.js": {
+    "file": "chunks/getViewCount-307db53d.js",
     "imports": [
-      "_index-1338106f.js"
+      "_index-1338106f.js",
+      "_siteConfig-cd65c973.js"
     ],
     "css": [
-      "assets/ExternalLink-0d0133bf.css"
+      "assets/error.svelte-0cf2a308.css"
     ]
   }
 }
