--- a/_app/immutable/manifest.json
+++ b/_app/immutable/manifest.json
@@ -1,11 +1,11 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-65fa21c5.js",
+    "file": "start-87b69633.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-1338106f.js",
-      "_index-6cb4c7e5.js",
+      "_index-5ecf021d.js",
+      "_index-10ea0a0b.js",
       "_singletons-d1fb5791.js"
     ],
     "dynamicImports": [
@@ -21,94 +21,94 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-b64548a8.js",
+    "file": "pages/__layout.svelte-e0090b58.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-1338106f.js",
-      "_index-6cb4c7e5.js",
+      "_index-5ecf021d.js",
+      "_index-10ea0a0b.js",
       "_siteConfig-cd65c973.js",
       "_singletons-d1fb5791.js",
-      "_stores-d7687092.js"
+      "_stores-f6c54ed2.js"
     ],
     "css": [
       "assets/pages/__layout.svelte-f385a540.css"
     ]
   },
   ".svelte-kit/runtime/components/error.svelte": {
-    "file": "error.svelte-75cf8528.js",
+    "file": "error.svelte-8219a7a5.js",
     "src": ".svelte-kit/runtime/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-1338106f.js"
+      "_index-5ecf021d.js"
     ],
     "css": [
-      "assets/error.svelte-0cf2a308.css"
+      "assets/pages/posts/__error.svelte-16ed11e2.css"
     ]
   },
   "src/routes/posts/__error.svelte": {
-    "file": "pages/posts/__error.svelte-9d4a97ea.js",
+    "file": "pages/posts/__error.svelte-525cd557.js",
     "src": "src/routes/posts/__error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-1338106f.js"
+      "_index-5ecf021d.js"
     ],
     "css": [
-      "assets/error.svelte-0cf2a308.css"
+      "assets/pages/posts/__error.svelte-16ed11e2.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-878512b4.js",
+    "file": "pages/index.svelte-9b0251de.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-1338106f.js",
-      "_getViewCount-aefb7d24.js",
+      "_index-5ecf021d.js",
+      "_getViewCount-0a8aa47d.js",
       "_siteConfig-cd65c973.js"
     ],
     "css": [
-      "assets/pages/index.svelte-44469348.css"
+      "assets/pages/index.svelte-29f4a75e.css"
     ]
   },
   "src/routes/posts/[slug].svelte": {
-    "file": "pages/posts/_slug_.svelte-0fb1205a.js",
+    "file": "pages/posts/_slug_.svelte-247ff316.js",
     "src": "src/routes/posts/[slug].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-1338106f.js",
+      "_index-5ecf021d.js",
       "_siteConfig-cd65c973.js",
-      "_getViewCount-aefb7d24.js",
-      "_stores-d7687092.js",
-      "_index-6cb4c7e5.js"
+      "_getViewCount-0a8aa47d.js",
+      "_stores-f6c54ed2.js",
+      "_index-10ea0a0b.js"
     ],
     "css": [
       "assets/pages/posts/_slug_.svelte-643897fc.css"
     ]
   },
   "src/routes/posts/index.svelte": {
-    "file": "pages/posts/index.svelte-8fe0c0da.js",
+    "file": "pages/posts/index.svelte-37d49d8d.js",
     "src": "src/routes/posts/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_index-1338106f.js"
+      "_index-5ecf021d.js"
     ],
     "css": [
-      "assets/error.svelte-0cf2a308.css"
+      "assets/pages/posts/__error.svelte-16ed11e2.css"
     ]
   },
-  "_index-1338106f.js": {
-    "file": "chunks/index-1338106f.js"
+  "_index-5ecf021d.js": {
+    "file": "chunks/index-5ecf021d.js"
   },
-  "_index-6cb4c7e5.js": {
-    "file": "chunks/index-6cb4c7e5.js",
+  "_index-10ea0a0b.js": {
+    "file": "chunks/index-10ea0a0b.js",
     "imports": [
-      "_index-1338106f.js"
+      "_index-5ecf021d.js"
     ]
   },
   "_singletons-d1fb5791.js": {
@@ -117,21 +117,21 @@
   "_siteConfig-cd65c973.js": {
     "file": "chunks/siteConfig-cd65c973.js"
   },
-  "_stores-d7687092.js": {
-    "file": "chunks/stores-d7687092.js",
+  "_stores-f6c54ed2.js": {
+    "file": "chunks/stores-f6c54ed2.js",
     "imports": [
-      "_index-6cb4c7e5.js",
-      "_index-1338106f.js"
+      "_index-10ea0a0b.js",
+      "_index-5ecf021d.js"
     ]
   },
-  "_getViewCount-aefb7d24.js": {
-    "file": "chunks/getViewCount-aefb7d24.js",
+  "_getViewCount-0a8aa47d.js": {
+    "file": "chunks/getViewCount-0a8aa47d.js",
     "imports": [
-      "_index-1338106f.js",
+      "_index-5ecf021d.js",
       "_siteConfig-cd65c973.js"
     ],
     "css": [
-      "assets/error.svelte-0cf2a308.css"
+      "assets/pages/posts/__error.svelte-16ed11e2.css"
     ]
   }
 }
