--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "svelte-preprocess": "^4.9.4",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3",
-    "unocss": "^0.22.6",
-    "unocss-preset-typography": "^0.4.0"
+    "unocss": "^0.22.6"
   },
   "type": "module"
 }
