--- a/_app/immutable/manifest.json
+++ b/_app/immutable/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-76a7b1bd.js",
+    "file": "start-f9bfaa17.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
@@ -45,7 +45,7 @@
       "_index-5ecf021d.js"
     ],
     "css": [
-      "assets/getViewCount-c00d2062.css"
+      "assets/error.svelte-91aebcd4.css"
     ]
   },
   "src/routes/posts/__error.svelte": {
@@ -57,11 +57,11 @@
       "_index-5ecf021d.js"
     ],
     "css": [
-      "assets/getViewCount-c00d2062.css"
+      "assets/error.svelte-91aebcd4.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-336ac2ec.js",
+    "file": "pages/index.svelte-d2f9d415.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
@@ -99,7 +99,7 @@
       "_index-5ecf021d.js"
     ],
     "css": [
-      "assets/getViewCount-c00d2062.css"
+      "assets/error.svelte-91aebcd4.css"
     ]
   },
   "_index-5ecf021d.js": {
@@ -131,7 +131,7 @@
       "_siteConfig-cd65c973.js"
     ],
     "css": [
-      "assets/getViewCount-c00d2062.css"
+      "assets/error.svelte-91aebcd4.css"
     ]
   }
 }
